--- a/app.json
+++ b/app.json
@@ -49,7 +49,7 @@
         "url": "https://apps.apple.com/id/app/gymgeeks-guide-schedule/id1576065594"
     },
     {
-        "bundle": "com.hoangminhthanh.GymGeeks",
+        "bundle": "com.hoangminhthanh.IPFinder",
         "name": "IP Finder - What is my IP",
         "icon": "https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/da/a0/ba/daa0ba22-2a2f-ef7e-8a4e-001bd3c3b756/AppIcon-0-1x_U007epad-0-85-220.png/146x0w.webp",
         "category": "Utilities",
